<package format="2">
  <name>flir_thermal_camera_description</name>
  <version>0.0.0</version>
  <description>URDF files for the Flir A400/A700 camera</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hector_gazebo_thermal_camera</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
  </export>

</package>
